# yolo_vehicles

./: .gitignore  README.md  bad.list  main.py  requirements.txt  train_aic_hcmc_relative.txt  val_aic_hcmc_relative.txt  vehicles.cfg  vehicles.data
benchmark/: Cargo.toml
benchmark/src/: benchmark.rs  main.rs  metrics.rs  models.rs  types.rs
configs/: yolov3-tiny-vehicles-infer.cfg  yolov3-tiny-vehicles.cfg  yolov4-tiny-vehicles-infer.cfg  yolov4-tiny-vehicles.cfg  yolov8n-vehicles.yaml
data/: vehicles.data  vehicles.names  vehicles.yaml
scripts/: create_videos.sh  distill_annotations.py  generate_file_lists.sh  prepare_dataset.py  split_distilled.sh  train_darknet.sh  train_ultralytics.py
