[package]
name = "vehicles-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark YOLOv3-tiny, YOLOv4-tiny, YOLOv8n for vehicles detection"

[dependencies]
# Use local od_opencv for testing letterbox fix
# od_opencv = { path = "/home/dimitrii/rust_work/object-detection-opencv-rust" }
# od_opencv = { path = "/home/dimitrii/rust_work/object-detection-opencv-rust", features = ["letterbox"] }
od_opencv = { version = "0.3.0", features = ["letterbox"] }
opencv = { version = "0.96.0", default-features = false, features = ["dnn", "imgcodecs", "imgproc"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "benchmark"
path = "src/main.rs"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs.git", version = "1.0", tag = "1.0.79" }
